refactor(applications): migrate create and fetch application use cases to command/query - based approach and restructure package
- remove broken tests